@@ -1,4 +1,10 @@
-﻿zg 07.03.2014 02:13:56 +0200 - build 3821
+﻿drkns 07.03.2014 02:38:36 +0200 - build 3822
+
+1. VC10 fix.
+
+2. Warning.
+
+zg 07.03.2014 02:13:56 +0200 - build 3821
 
 1. 0002614: SendDlgMessage: не падать при невалидном hDlg.
 
